--- a/package.yaml
+++ b/package.yaml
@@ -47,7 +47,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
-    - -fllvm
+#    - -fllvm
     dependencies:
     - variant-summary-from-vcf
 
